# -DX-

./: .gitignore  .mcp.json  .twin-build.json  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/backend/: .env.example  Dockerfile  pyproject.toml
src/backend/app/: main.py
src/backend/app/api/v1/: deliveries.py  notifications.py  portal.py  proposals.py  reviews.py  tenants.py  users.py
src/backend/app/core/: auth.py  config.py  database.py  exceptions.py
src/backend/app/models/: __init__.py  approval_step.py  contract.py  csv_upload_record.py  initial_data_collection_status.py  kpi_data_point.py  kpi_metric.py  notification.py  onboarding_record.py  portal_url.py  proposal.py  proposal_evidence.py  tenant.py  user.py
src/backend/app/schemas/: __init__.py  delivery.py  proposal.py  review.py  tenant.py  user.py
src/backend/app/services/: claude.py  file_extractor.py  s3.py  url_fetcher.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 20260611_0000_initial_schema.py  20260616_0001_add_tenant_contact_email.py  20260616_0002_add_content_text.py  20260616_0003_proposal_inputs.py
src/backend/tests/: conftest.py  test_approval_flow.py  test_deliveries.py  test_health.py  test_portal.py  test_proposals.py  test_reviews.py
src/frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json
src/frontend/src/app/: layout.tsx  not-found.tsx
src/frontend/src/app/(dashboard)/: error.tsx  layout.tsx
src/frontend/src/lib/: api.ts
src/frontend/src/store/: auth.ts  toast.ts
(+22 files in other folders)
