[tool.poetry]
name = "chihousousei-dx-backend"
version = "0.1.0"
description = "地方創生DX バックエンド API"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.13.4"}
pydantic-settings = "^2.6.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
httpx = "^0.27.0"
anthropic = "^0.40.0"
boto3 = "^1.35.0"
python-multipart = "^0.0.12"
greenlet = "^3.5.1"
pypdf = "^6.13.2"
python-docx = "^1.2.0"
openpyxl = ">=3.1"
python-pptx = "^1.0.2"
beautifulsoup4 = ">=4.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.7.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
